Update CORS configuration in SecurityConfig: streamline allowed origins for development, enhance allowed methods to include PATCH, and improve exposed headers. Enable credentials for Swagger UI and set preflight cache duration.